[tool.poetry]
name = "multimeter-py"
version = "0.1.0"
description = ""
authors = ["Hugues Hiegel <hugues.hiegel@orange.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
serial = "^0.0.97"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
